modified ArrayListCustomerDao.java